--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -101,14 +101,14 @@
 
   <!-- additional -->
   <div class="row">
-    <div class="col"><p class="text-right">{{ course.standardLaps }} Laps suggested</div>
+    <div class="col"><p *ngIf="course.standardLaps>0" class="text-right">{{ course.standardLaps }} Laps suggested</div>
 
   </div>
 
   <div class="row">
     <div class="col-sm-6"><img src="https://placehold.it/50x50" alt="timing" class="thumbnail float-right"></div>
     <div class="col-sm-3"><h6>Expected Lap Time</h6></div>
-    <div class="col-sm-3"><p class="text-right">{{ course.defaultLapTimeMin }} Mins.</p></div>
+    <div class="col-sm-3"><p class="text-right">{{ course.defaultLapTimeSec | sectime }}</p></div>
   </div>
 
   <div class="row">
