Commenting (Basis) eingebaut

--- a/src/app/course-wizard-basics/course-wizard-basics.component.html
+++ b/src/app/course-wizard-basics/course-wizard-basics.component.html
@@ -42,6 +42,21 @@
     </div>
   </div>
 
+  <div class="form-row">
+    <div class="form-group col">
+      <label for="txtDescription">Description</label>
+      <textarea
+        formControlName="description"
+        rows="3"
+        cols="50"
+        maxlength="1000"
+        class="form-control"
+        placeholder="anything you like to say"
+        id="txtDescription">
+      </textarea>
+    </div>
+  </div>
+
   <hr>
 
   <div class="form-row" style="padding-bottom: 20px;">
