--- a/src/app/rating/rating.component.css
+++ b/src/app/rating/rating.component.css
@@ -3,8 +3,12 @@
 }
 
 .material-icons {
-   display: inline-block;
+  display: inline-block;
   font-size: inherit;
   height: 16px;
   width: 16px;
+}
+
+.voting {
+  width: 200px;
 }
