--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="form-row">
+    <div class="form-row" style="margin-bottom: 20px;">
       <button type="submit" class="btn btn-primary">Upload</button>
     </div>
 
