--- a/src/app/course-wizard-blueprint/course-wizard-blueprint.component.html
+++ b/src/app/course-wizard-blueprint/course-wizard-blueprint.component.html
@@ -13,10 +13,31 @@
         [resultFormatter]="formatCourseMatches"
         [inputFormatter]="formatCourseMatches"
         [editable]='false'
-        formControlName="routeInfo">
+        formControlName="routeInfo"
+        (selectItem)="OnCourseSelected($event)">
       <!-- error block -->
       <div *ngIf="submitted && frm.routeInfo.errors" class="invalid-feedback">
         <div *ngIf="frm.routeInfo.errors.required">Please select a Forza Route</div>
+      </div>
+    </div>
+    <div class="form-group col-md4">
+      <label for="selSeries">Series</label>
+      <select id="selSeries" class='form-control' formControlName="seriesCode" [ngClass]="{ 'is-invalid': submitted && frm.seriesCode.errors }">
+        <option *ngFor="let series of Series" value="{{series.code}}">{{ series.text }}</option>
+      </select>
+      <!-- error block -->
+      <div *ngIf="submitted && frm.seriesCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.seriesCode.errors.required">Series is required</div>
+      </div>
+    </div>
+    <div class="form-group col-md4">
+      <label for="selDifficulty">Difficulty</label>
+      <select id="selDifficulty" class='form-control' formControlName="difficultyCode" [ngClass]="{ 'is-invalid': submitted && frm.difficultyCode.errors }">
+        <option *ngFor="let difficulty of Difficulty" value="{{difficulty.code}}">{{ difficulty.text }}</option>
+      </select>
+      <!-- error block -->
+      <div *ngIf="submitted && frm.difficultyCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.difficultyCode.errors.required">Difficulty is required</div>
       </div>
     </div>
   </div>
@@ -43,30 +64,6 @@
     </div>
   </div>
 
-  <div class="form-row">
-    <div class="form-group col-md4">
-      <label for="selSeries">Series</label>
-      <select id="selSeries" class='form-control' formControlName="seriesCode" [ngClass]="{ 'is-invalid': submitted && frm.seriesCode.errors }">
-        <option *ngFor="let series of Series" value="{{series.code}}">{{ series.text }}</option>
-      </select>
-      <!-- error block -->
-      <div *ngIf="submitted && frm.seriesCode.errors" class="invalid-feedback">
-        <div *ngIf="frm.seriesCode.errors.required">Series is required</div>
-      </div>
-    </div>
-
-    <div class="form-group col-md4">
-      <label for="selDifficulty">Difficulty</label>
-      <select id="selDifficulty" class='form-control' formControlName="difficultyCode" [ngClass]="{ 'is-invalid': submitted && frm.difficultyCode.errors }">
-        <option *ngFor="let difficulty of Difficulty" value="{{difficulty.code}}">{{ difficulty.text }}</option>
-      </select>
-      <!-- error block -->
-      <div *ngIf="submitted && frm.difficultyCode.errors" class="invalid-feedback">
-        <div *ngIf="frm.difficultyCode.errors.required">Difficulty is required</div>
-      </div>
-    </div>
-  </div>
-
   <hr>
 
   <div class="form-row" style="padding-bottom: 20px;">
@@ -86,6 +83,5 @@
       </button>
     </div>
   </div>
-
 
 </form>
