--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -7,20 +7,27 @@
 <!-- ToDo: Titel & Bilder dynamisch setzen -->
 <div class="form-row text-center">
   <div class="col">
-    <img src="https://placehold.it/50x50" alt="Game">
+    <img src="assets/images/fh4.jpg" height="50" width="50" alt="Game" title="{{course?.gameText}}" class="rounded">
   </div>
   <div [ngSwitch]="course?.typeCode" class="col">
     <img *ngSwitchCase="TRACKTYPE.standard" src="https://placehold.it/50x50/0000" alt="Type" title="Standard Track">
     <img *ngSwitchCase="TRACKTYPE.community" src="https://placehold.it/50x50/0000FF" alt="Type" title="Community Track">
   </div>
   <div [ngSwitch]="course?.seriesCode" class="col">
-    <img *ngSwitchCase="SERIES.roadRacing" src="assets/icons/series/road.png" alt="Series" title="Road Racing" class="rounded">
-    <img *ngSwitchCase="SERIES.dirtRacing" src="assets/icons/series/dirt.png" alt="Series" title="Dirt Racing" class="rounded">
-    <img *ngSwitchCase="SERIES.crossCountry" src="assets/icons/series/country.png" alt="Series" title="Cross Country" class="rounded">
+    <img *ngSwitchCase="SERIES.roadRacing" src="assets/icons/series/road.png" alt="Series" title="{{course.seriesText}}" class="rounded">
+    <img *ngSwitchCase="SERIES.dirtRacing" src="assets/icons/series/dirt.png" alt="Series" title="{{course.seriesText}}" class="rounded">
+    <img *ngSwitchCase="SERIES.crossCountry" src="assets/icons/series/country.png" alt="Series" title="{{course.seriesText}}" class="rounded">
     <!-- <img *ngSwitchCase="SERIES.streetScene" src="https://placehold.it/50x50" alt="Series" title="Street Scene" class="rounded"> -->
   </div>
-  <div class="col">
-    <img src="https://placehold.it/50x50" alt="Car Class">
+  <div [ngSwitch]="course?.carClassCode" class="col">
+    <img *ngSwitchCase="CARCLASS.A800" src="assets/icons/carclass/cc_a.png" alt="Car Class" title="{{course.carClassText}}" class="rounded">
+      <img *ngSwitchCase="CARCLASS.B700" src="assets/icons/carclass/cc_b.png" alt="Car Class" title="{{course.carClassText}}" class="rounded">
+      <img *ngSwitchCase="CARCLASS.C600" src="assets/icons/carclass/cc_c.png" alt="Car Class" title="{{course.carClassText}}" class="rounded">
+      <img *ngSwitchCase="CARCLASS.D500" src="assets/icons/carclass/cc_d.png" alt="Car Class" title="{{course.carClassText}}" class="rounded">
+      <img *ngSwitchCase="CARCLASS.S1900" src="assets/icons/carclass/cc_s1.png" alt="Car Class" title="{{course.carClassText}}" class="rounded">
+      <img *ngSwitchCase="CARCLASS.S2998" src="assets/icons/carclass/cc_s2.png" alt="Car Class" title="{{course.carClassText}}" class="rounded">
+      <img *ngSwitchCase="CARCLASS.X999" src="assets/icons/carclass/cc_x.png" alt="Car Class" title="{{course.carClassText}}" class="rounded">
+      <img *ngSwitchCase="CARCLASS.allclasses" src="assets/icons/carclass/cc_open.png" alt="Car Class" title="{{course.carClassText}}" class="rounded">
   </div>
 </div>
 
@@ -42,7 +49,7 @@
   <div class="col-sm-3"></div>
   <div class="col-sm-3"></div>
   <div class="col-sm-3"></div>
-  <div *ngIf="course" class="col-sm-3"><p class="text-right"><ew-rating [rating]=course.ratingInfo.rating [showImmediately]=false></ew-rating></p></div>
+  <div *ngIf="course" class="col-sm-3"><p class="text-right"><ew-rating [rating]=course.rating [showImmediately]=false></ew-rating></p></div>
 </div>
 
 <!-- standard info -->
@@ -133,15 +140,10 @@
 
 <div class="form-row" style="margin-bottom: 20px;">
   <div *ngIf="course" class="col-sm-3">
-    <ew-rating
-      [rating]=course.ratingInfo.rating
-      [upVotes]=course.ratingInfo.upVotes
-      [downVotes]=course.ratingInfo.downVotes
-      [userVote]=course.ratingInfo.userVote
-      [showImmediately]=false
-      [canVote]=true
-      (voteEvent)=castVote($event)>
-    </ew-rating>
+    <ew-voting
+      [ownerType]="DAO.course"
+      [ownerId]=course?.metaInfo.id>
+    </ew-voting>
   </div>
   <div class="col-sm-3"></div>
   <div class="col-sm-3"></div>
