--- a/src/app/course-form/course-form.component.html
+++ b/src/app/course-form/course-form.component.html
@@ -1,19 +1,19 @@
 <!-- https://stackoverflow.com/questions/47011521/angular-4-select-default-value-in-dropdown-reactive-forms -->
-<form [formGroup]="courseForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
 
   <div class="row">
-    <p class="text-left">Basics</p>
+    <p class="text-left">Basics (1/5)</p>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md4">
       <label for="selGame">Game</label>
-      <select id="selGame" class='form-control' formControlName="gameCode" [ngClass]="{ 'is-invalid': submitted && courseFrm.gameCode.errors }">
+      <select id="selGame" class='form-control' formControlName="gameCode" [ngClass]="{ 'is-invalid': submitted && frm.gameCode.errors }">
         <option *ngFor="let game of Game" value="{{game.code}}">{{ game.text }}</option>
       </select>
       <!-- error block -->
-      <div *ngIf="submitted && courseFrm.gameCode.errors" class="invalid-feedback">
-        <div *ngIf="courseFrm.gameCode.errors.required">Game is required</div>
+      <div *ngIf="submitted && frm.gameCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.gameCode.errors.required">Game is required</div>
       </div>
     </div>
 
@@ -25,43 +25,97 @@
         class="form-control"
         placeholder="my blueprint"
         id="iptName"
-        [ngClass]="{ 'is-invalid': submitted && courseFrm.courseName.errors }">
+        [ngClass]="{ 'is-invalid': submitted && frm.courseName.errors }">
       <!-- error block -->
-      <div *ngIf="submitted && courseFrm.courseName.errors" class="invalid-feedback">
-        <div *ngIf="courseFrm.courseName.errors.required">Coursename is required</div>
+      <div *ngIf="submitted && frm.courseName.errors" class="invalid-feedback">
+        <div *ngIf="frm.courseName.errors.required">Coursename is required</div>
       </div>
     </div>
 
     <div class="form-group col-md4">
       <label for="iptSharingCode">Sharing Code</label>
-      <input id="iptSharingCode" class="form-control" type="number" formControlName="sharingCode" min="100000000" max="999999999" [ngClass]="{ 'is-invalid': submitted && courseFrm.sharingCode.errors }">
+      <input
+        id="iptSharingCode"
+        class="form-control"
+        type="number"
+        formControlName="sharingCode"
+        min="100000000"
+        max="999999999"
+        [ngClass]="{ 'is-invalid': submitted && frm.sharingCode.errors }">
       <!-- error block -->
-      <div *ngIf="submitted && courseFrm.sharingCode.errors" class="invalid-feedback">
-        <div *ngIf="courseFrm.sharingCode.errors.required">Sharing Code is required</div>
-        <div *ngIf="courseFrm.sharingCode.errors.min || courseFrm.sharingCode.errors.max">Sharing Code is invalid</div>
+      <div *ngIf="submitted && frm.sharingCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.sharingCode.errors.required">Sharing Code is required</div>
+        <div *ngIf="frm.sharingCode.errors.min || frm.sharingCode.errors.max">Sharing Code is invalid</div>
       </div>
     </div>
   </div>
 
   <div class="form-row">
+    <div class="form-group col">
+      <label for="txtDescription">Description</label>
+      <textarea
+        formControlName="description"
+        rows="3"
+        cols="50"
+        maxlength="1000"
+        class="form-control"
+        placeholder="anything you like to say"
+        id="txtDescription">
+      </textarea>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <p class="text-left">Blueprint (2/5)</p>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group col">
+      <label for="iptForzaRoute">Starting Place</label>
+      <input id="iptForzaRoute" type="text" class="form-control"
+        [class.is-invalid]="searchFailed"
+        [ngbTypeahead]="searchCourse"
+        [resultFormatter]="formatCourseMatches"
+        [inputFormatter]="formatCourseMatches"
+        [editable]='false'
+        formControlName="routeInfo"
+        (selectItem)="OnCourseSelected($event)">
+      <div *ngIf="submitted && frm.routeInfo.errors" class="invalid-feedback">
+        <div *ngIf="frm.routeInfo.errors.required">Please select a Forza Route</div>
+      </div>
+    </div>
     <div class="form-group col-md4">
       <label for="selSeries">Series</label>
-      <select id="selSeries" class='form-control' formControlName="seriesCode" [ngClass]="{ 'is-invalid': submitted && courseFrm.seriesCode.errors }">
+      <select id="selSeries" class='form-control' formControlName="seriesCode" [ngClass]="{ 'is-invalid': submitted && frm.seriesCode.errors }">
         <option *ngFor="let series of Series" value="{{series.code}}">{{ series.text }}</option>
       </select>
       <!-- error block -->
-      <div *ngIf="submitted && courseFrm.seriesCode.errors" class="invalid-feedback">
-        <div *ngIf="courseFrm.seriesCode.errors.required">Series is required</div>
+      <div *ngIf="submitted && frm.seriesCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.seriesCode.errors.required">Series is required</div>
       </div>
     </div>
+    <div class="form-group col-md4">
+      <label for="selDifficulty">Difficulty</label>
+      <select id="selDifficulty" class='form-control' formControlName="difficultyCode" [ngClass]="{ 'is-invalid': submitted && frm.difficultyCode.errors }">
+        <option *ngFor="let difficulty of Difficulty" value="{{difficulty.code}}">{{ difficulty.text }}</option>
+      </select>
+      <!-- error block -->
+      <div *ngIf="submitted && frm.difficultyCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.difficultyCode.errors.required">Difficulty is required</div>
+      </div>
+    </div>
+  </div>
 
+  <div class="form-row">
     <div class="form-group col">
       <label for="chpTerrain">Terrain</label>
       <tag-input
         id="chpTerrain"
         formControlName="terrainCodes"
         [onlyFromAutocomplete]=true
-        [ngClass]="{ 'is-invalid': submitted && courseFrm.terrainCodes.errors }">
+        [ngClass]="{ 'is-invalid': submitted && frm.terrainCodes.errors }">
         <tag-input-dropdown
           [showDropdownIfEmpty]="true"
           [autocompleteItems]=Terrain
@@ -69,54 +123,40 @@
           [displayBy]="'text'">
         </tag-input-dropdown>
       </tag-input>
-      <!-- error block -->
-      <div *ngIf="submitted && courseFrm.terrainCodes.errors" class="invalid-feedback">
-        <div *ngIf="courseFrm.terrainCodes.errors.required">Please add at least one tag</div>
+      <!-- can't populate ngx-chips at this time -->
+      <div *ngIf="submitted && frm.terrainCodes.errors" class="invalid-feedback">
+        <div *ngIf="frm.terrainCodes.errors.required">Please add tags again</div>
       </div>
-    </div>
-
-    <div class="form-group col-md4">
-      <label for="selDifficulty">Difficulty</label>
-      <select id="selDifficulty" class='form-control' formControlName="difficultyCode" [ngClass]="{ 'is-invalid': submitted && courseFrm.difficultyCode.errors }">
-        <option *ngFor="let difficulty of Difficulty" value="{{difficulty.code}}">{{ difficulty.text }}</option>
-      </select>
-      <!-- error block -->
-      <div *ngIf="submitted && courseFrm.difficultyCode.errors" class="invalid-feedback">
-        <div *ngIf="courseFrm.difficultyCode.errors.required">Difficulty is required</div>
-      </div>
+      <!-- <h6 *ngIf="frm.terrainCodes?.errors?.required" class="text-warning">Please add tags again</h6> -->
     </div>
   </div>
 
-  <div class="form-row">
-    <div class="form-group col">
-      <div class="form-group col">
-        <label for="iptForzaRoute">Starting Place</label>
-        <input id="iptForzaRoute" type="text" class="form-control"
-          [class.is-invalid]="searchFailed"
-          [ngbTypeahead]="searchCourse"
-          [resultFormatter]="formatCourseMatches"
-          [inputFormatter]="formatCourseMatches"
-          [editable]='false'
-          formControlName="routeInfo">
-      </div>
-    </div>
-  </div>
+  <hr>
 
   <div class="row">
-    <p class="text-left">Restrictions</p>
+    <p class="text-left">Restrictions (3/5)</p>
   </div>
+
   <div class="form-row">
     <div class="form-group col-md4">
       <label for="selCarClass">Car Class</label>
-      <select id="selCarClass" class='form-control' formControlName="carClassCode">
+      <select id="selCarClass" class='form-control' formControlName="carClassCode" [ngClass]="{ 'is-invalid': submitted && frm.carClassCode.errors }">
         <option *ngFor="let carClass of CarClass" value="{{carClass.code}}">{{ carClass.text }}</option>
       </select>
+      <!-- error block -->
+      <div *ngIf="submitted && frm.carClassCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.carClassCode.errors.required">Car Class is required</div>
+      </div>
     </div>
     <div class="form-group col-md4">
       <label for="selCarTheme">Car Theme</label>
-      <select id="selCarTheme" class='form-control' formControlName="carThemeCode">
+      <select id="selCarTheme" class='form-control' formControlName="carThemeCode" [ngClass]="{ 'is-invalid': submitted && frm.carThemeCode.errors }">
         <option *ngFor="let carTheme of CarTheme" value="{{carTheme.code}}">{{ carTheme.text }}</option>
       </select>
+      <!-- error block -->
+      <div *ngIf="submitted && frm.carThemeCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.carThemeCode.errors.required">Car Theme is required</div>
+      </div>
     </div>
     <div class="form-group col">
       <label for="iptCar">Car</label>
@@ -130,53 +170,68 @@
     </div>
   </div>
 
+  <hr>
 
   <div class="row">
-    <p class="text-left">Condititions</p>
+    <p class="text-left">Condititions (4/5)</p>
   </div>
   <div class="form-row">
     <div class="form-group col">
       <label for="selSeason">Season</label>
-      <select id="selSeason" class='form-control' formControlName="seasonCode" [ngClass]="{ 'is-invalid': submitted && courseFrm.seasonCode.errors }">
+      <select id="selSeason" class='form-control' formControlName="seasonCode" [ngClass]="{ 'is-invalid': submitted && frm.seasonCode.errors }">
         <option *ngFor="let season of Season" value="{{season.code}}">{{ season.text }}</option>
       </select>
       <!-- error block -->
-      <div *ngIf="submitted && courseFrm.seasonCode.errors" class="invalid-feedback">
-        <div *ngIf="courseFrm.seasonCode.errors.required">Season is required</div>
+      <div *ngIf="submitted && frm.seasonCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.seasonCode.errors.required">Season is required</div>
       </div>
     </div>
     <div class="form-group col">
       <label for="selDaytime">Time of Day</label>
-      <select id="selDaytime" class='form-control' formControlName="daytimeCode">
+      <select id="selDaytime" class='form-control' formControlName="daytimeCode" [ngClass]="{ 'is-invalid': submitted && frm.daytimeCode.errors }">
         <option *ngFor="let daytime of DayTime" value="{{daytime.code}}">{{ daytime.text }}</option>
       </select>
+      <!-- error block -->
+      <div *ngIf="submitted && frm.daytimeCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.daytimeCode.errors.required">Time of Day is required</div>
+      </div>
     </div>
     <div class="form-group col">
       <label for="selWeather">Weather</label>
-      <select id="selWeather" class='form-control' formControlName="weatherCode">
+      <select id="selWeather" class='form-control' formControlName="weatherCode" [ngClass]="{ 'is-invalid': submitted && frm.weatherCode.errors }">
         <option *ngFor="let weather of Weather" value="{{weather.code}}">{{ weather.text }}</option>
       </select>
+      <!-- error block -->
+      <div *ngIf="submitted && frm.weatherCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.weatherCode.errors.required">Weather is required</div>
+      </div>
     </div>
   </div>
 
+  <hr>
+
   <div class="row">
-    <p class="text-left">Additional</p>
+    <p class="text-left">Additional (5/5)</p>
   </div>
   <div class="form-row">
     <div class="form-group col">
       <label for="iptLaps">Laps</label>
-      <input id="iptLaps" class="form-control" type="number" formControlName="laps" min="1" max="50" [ngClass]="{ 'is-invalid': submitted && courseFrm.laps.errors }">
+      <input id="iptLaps" class="form-control" type="number" formControlName="laps" min="1" max="50" [ngClass]="{ 'is-invalid': submitted && frm.laps.errors }">
       <!-- error block -->
-      <div *ngIf="submitted && courseFrm.laps.errors" class="invalid-feedback">
-        <div *ngIf="courseFrm.laps.errors.required">Please suggest an ideal number of laps</div>
-        <div *ngIf="courseFrm.laps.errors.min || courseFrm.laps.errors.max">Laps must be between 1 and 50</div>
+      <div *ngIf="submitted && frm.laps.errors" class="invalid-feedback">
+        <div *ngIf="frm.laps.errors.required">Please suggest an ideal number of laps</div>
+        <div *ngIf="frm.laps.errors.min || frm.laps.errors.max">Laps must be between 1 and 50</div>
       </div>
     </div>
     <div class="form-group col">
       <label for="selTimeProgression">Time Progression</label>
-      <select id="selTimeProgression" class='form-control' formControlName="timeProgressionCode">
+      <select id="selTimeProgression" class='form-control' formControlName="timeProgressionCode" [ngClass]="{ 'is-invalid': submitted && frm.timeProgressionCode.errors }">
         <option *ngFor="let timeProgression of TimeProgression" value="{{timeProgression.code}}">{{ timeProgression.text }}</option>
       </select>
+      <!-- error block -->
+      <div *ngIf="submitted && frm.timeProgressionCode.errors" class="invalid-feedback">
+        <div *ngIf="frm.timeProgressionCode.errors.required">Time Progession is required</div>
+      </div>
     </div>
     <div class="form-group col">
       <label for="iptDistance">Distance (KM)</label>
@@ -186,9 +241,10 @@
 
   <div class="form-row">
     <div class="col" style="text-align: right;">
-      <!-- test: mit *ngIf/else Add/Save setzen-->
-      <button *ngIf="editing===false" class="btn btn-primary" type="submit" [disabled]=courseFrm.invalid>Create Blueprint</button>
-      <button *ngIf="editing===true" class="btn btn-primary" type="submit" [disabled]=courseFrm.invalid>Save Blueprint</button>
+      <button *ngIf="editing===false" class="btn btn-primary" type="submit" [disabled]=form.invalid>Create Blueprint</button>
+      <!-- <button *ngIf="editing===true" class="btn btn-primary" type="submit" [disabled]=form.invalid>Save Blueprint</button> -->
+      <button *ngIf="editing===true" class="btn btn-primary" type="submit" style="margin-bottom: 20px;">Save Blueprint</button>
     </div>
   </div>
+
 </form>
